// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete is disabled 1`] = `
<div
  className={undefined}
>
  <div
    className="root"
  >
    
    <div
      className="inputWrapper"
    >
      <div
        aria-hidden={true}
        className="autocompleteWrapper"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="autocompleteContent"
        >
          <div
            className="selectedWords"
          >
            <input
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              value=""
            />
          </div>
        </div>
        <div>
          <div
            className="options firstOptionHighlighted"
            style={null}
          >
            <div
              className={undefined}
              data-bubble-container={true}
            >
              <ul
                className="ul"
              >
                <li
                  aria-hidden={true}
                  className="option highlightedOption"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  cat
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  dog
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  fish
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  home
                </li>
              </ul>
            </div>
            <span
              className={undefined}
              data-bubble-arrow={true}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete renders correctly 1`] = `
<div
  className={undefined}
>
  <div
    className="root"
  >
    
    <div
      className="inputWrapper"
    >
      <div
        aria-hidden={true}
        className="autocompleteWrapper"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="autocompleteContent"
        >
          <div
            className="selectedWords"
          >
            <input
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              value=""
            />
          </div>
        </div>
        <div>
          <div
            className="options firstOptionHighlighted"
            style={null}
          >
            <div
              className={undefined}
              data-bubble-container={true}
            >
              <ul
                className="ul"
              >
                <li
                  aria-hidden={true}
                  className="option highlightedOption"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  cat
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  dog
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  fish
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  home
                </li>
              </ul>
            </div>
            <span
              className={undefined}
              data-bubble-arrow={true}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete renders with a placeholder 1`] = `
<div
  className={undefined}
>
  <div
    className="root"
  >
    
    <div
      className="inputWrapper"
    >
      <div
        aria-hidden={true}
        className="autocompleteWrapper"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="autocompleteContent"
        >
          <div
            className="selectedWords"
          >
            <input
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Enter recovery phrase"
              value=""
            />
          </div>
        </div>
        <div>
          <div
            className="options firstOptionHighlighted"
            style={null}
          >
            <div
              className={undefined}
              data-bubble-container={true}
            >
              <ul
                className="ul"
              >
                <li
                  aria-hidden={true}
                  className="option highlightedOption"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  cat
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  dog
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  fish
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  home
                </li>
              </ul>
            </div>
            <span
              className={undefined}
              data-bubble-arrow={true}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete renders with an error 1`] = `
<div
  className={undefined}
>
  <div
    className="root errored"
  >
    <div
      className="error"
    >
      Your mnemonic phrase is incorrect
    </div>
    <div
      className="inputWrapper"
    >
      <div
        aria-hidden={true}
        className="autocompleteWrapper"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="autocompleteContent errored"
        >
          <div
            className="selectedWords"
          >
            <input
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              value=""
            />
          </div>
        </div>
        <div>
          <div
            className="options firstOptionHighlighted"
            style={null}
          >
            <div
              className={undefined}
              data-bubble-container={true}
            >
              <ul
                className="ul"
              >
                <li
                  aria-hidden={true}
                  className="option highlightedOption"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  cat
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  dog
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  fish
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  home
                </li>
              </ul>
            </div>
            <span
              className={undefined}
              data-bubble-arrow={true}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete renders with label 1`] = `
<div
  className={undefined}
>
  <div
    className="root"
  >
    
    <label
      aria-hidden={true}
      className="label"
      onClick={[Function]}
      role="presentation"
    >
      Enter your recovery phrase below
    </label>
    <div
      className="inputWrapper"
    >
      <div
        aria-hidden={true}
        className="autocompleteWrapper"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="autocompleteContent"
        >
          <div
            className="selectedWords"
          >
            <input
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              value=""
            />
          </div>
        </div>
        <div>
          <div
            className="options firstOptionHighlighted"
            style={null}
          >
            <div
              className={undefined}
              data-bubble-container={true}
            >
              <ul
                className="ul"
              >
                <li
                  aria-hidden={true}
                  className="option highlightedOption"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  cat
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  dog
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  fish
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  home
                </li>
              </ul>
            </div>
            <span
              className={undefined}
              data-bubble-arrow={true}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete uses render prop - renderOptions 1`] = `
<div
  className={undefined}
>
  <div
    className="root"
  >
    
    <div
      className="inputWrapper"
    >
      <div
        aria-hidden={true}
        className="autocompleteWrapper"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="autocompleteContent"
        >
          <div
            className="selectedWords"
          >
            <input
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              value=""
            />
          </div>
        </div>
        <div>
          <div
            className="options firstOptionHighlighted"
            style={null}
          >
            <div
              className={undefined}
              data-bubble-container={true}
            >
              <ul
                className="ul"
              >
                <li>
                  <span>
                    #0: cat
                  </span>
                </li>
                <li>
                  <span>
                    #1: dog
                  </span>
                </li>
                <li>
                  <span>
                    #2: fish
                  </span>
                </li>
                <li>
                  <span>
                    #3: home
                  </span>
                </li>
              </ul>
            </div>
            <span
              className={undefined}
              data-bubble-arrow={true}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete uses render prop - renderSelections 1`] = `
<div
  className={undefined}
>
  <div
    className="root"
  >
    
    <div
      className="inputWrapper"
    >
      <div
        aria-hidden={true}
        className="autocompleteWrapper"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="autocompleteContent"
        >
          <div
            className="selectedWords"
          >
            <input
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              value=""
            />
          </div>
        </div>
        <div>
          <div
            className="options firstOptionHighlighted"
            style={null}
          >
            <div
              className={undefined}
              data-bubble-container={true}
            >
              <ul
                className="ul"
              >
                <li
                  aria-hidden={true}
                  className="option highlightedOption"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  cat
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  dog
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  fish
                </li>
                <li
                  aria-hidden={true}
                  className="option"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="presentation"
                >
                  home
                </li>
              </ul>
            </div>
            <span
              className={undefined}
              data-bubble-arrow={true}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
